--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "classnames": "^2.5.1",
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
